<resources>
    <string name="app_name">Cloud Book Detail</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_connection">No network connection</string>
    <string name="book_cover_image">Book cover image</string>
    <string name="tagline_placeholder">tagline</string>
    <string name="title_placeholder">title</string>
    <string name="author_placeholder">author</string>
    <string name="date_placeholder">dd/mm/yy</string>
    <string name="error_loading_books">Can\'t load books</string>
    <string name="description_placeholder">description</string>
    <string name="version_placeholder">version</string>
</resources>
